style.css
body, h1, h2, h3, p {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: #f5f5f5;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 20px;
}

.navbar {
  background: rgb(2,0,36);
  background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 45%);
    color: #fff;
    font-size: 1.25rem;
    font-weight: bold;
    text-transform: uppercase;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 0;
    /* z-index: 1; */
}

.logo {
    font-size: 24px;
    font-weight: bold;
    display: none;
}

.menu-toggle {
  display: none;
}

.menu {
  display: flex;
  list-style: none;
  justify-content: right;
}

.menu li {
  margin-right: 20px;
}

.menu a {
    text-decoration: none;
    color: #fff;
    transition: color 0.3s ease;
    padding: 20px;
}

.menu a:hover {
  color: #ad4ad5;
  cursor:pointer;
}

.hero {
    color: #804FB3;
    height: 28rem;
    font-weight: 800;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 6rem 0 20px;
    overflow: hidden;
}

.hero h1 {
  font-size: 4rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
}

.hero p {
  font-size: 2.5rem;
}

.clouds {
  position: absolute;
  top: 0;
  left: 0;
  width: 6500px;
  /* height: 80%;
  margin-top: 10rem; */
  background: url('/media/clouds.png');
  opacity: 0.4;
  animation: scrollClouds 320s linear infinite;
}

@keyframes scrollClouds {
    0%, 100% {
      transform: translateX(0);
    }
    50% {
      transform: translateX(-3250px);
    }
}

footer {
  background: rgb(2,0,36);
  background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 100%);
  color: #fff;
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: .5rem 0;
  box-sizing: border-box;
}

.social-links {
  list-style: none;
  padding: 0;
  margin-bottom: 10px;
}

.social-links li {
  display: inline-block;
  margin-right: 10px;
}

.social-links a {
    color: #fff;
    font-size: 24px;
}

@media screen and (min-width: 767px) {
  .clouds {
    height: 80%; /* Adjust as needed */
    margin-top: 10rem; /* Adjust as needed */
  }
}

@media screen and (max-width: 766px) {
    .menu {
        display: none;
    }

    .logo {
        display: block;
    }

    .menu-toggle {
      display: block;
      cursor: pointer;
    }

    .hero {
      position: fixed;
    }

    .clouds {
      height: 100%;
      margin-top: 0;
    }

    html, body, section {
      overflow-y: hidden;
  }
}

